Fixed dram_awsf1 test to avoid name conflict with Axi4.bsv in bsc-contrib library

--- a/tests/dram_awsf1/Makefile
+++ b/tests/dram_awsf1/Makefile
@@ -3,14 +3,14 @@ S2H_INTERFACES = Ddr3TestRequest:DdrAws.request
 H2S_INTERFACES = DdrAws:Ddr3TestIndication
 
 BSVFILES= \
-    DdrAws.bsv\
-    Axi4.bsv
+    Axi4New.bsv\
+    DdrAws.bsv
 
 CPPFILES= testddr3.cpp
 
 
 PIN_TYPE = Axi4
-PIN_TYPE_INCLUDE = Axi4
+PIN_TYPE_INCLUDE = Axi4New
 AUTOTOP = --interface pins:DdrAws.ddr3
 
 CONNECTALFLAGS += -D AWSF1_DDR_A
